syntax = "proto3";
package swap.sale;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/yoshidan/cosmos-trustless-swap/x/sale/types";

// Msg defines the Msg service.
service Msg {
      rpc Sell(MsgSell) returns (MsgSellResponse);
  rpc Cancel(MsgCancel) returns (MsgCancelResponse);
  rpc Buy(MsgBuy) returns (MsgBuyResponse);
  rpc SellNFT(MsgSellNFT) returns (MsgSellNFTResponse);
  rpc BuyNFT(MsgBuyNFT) returns (MsgBuyNFTResponse);
  rpc CancelNFT(MsgCancelNFT) returns (MsgCancelNFTResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgSell {
  string creator = 1;
  uint64 id = 2;
  string amount = 3;
  string price = 4;
}

message MsgSellResponse {
}

message MsgCancel {
  string creator = 1;
  uint64 id = 2;
}

message MsgCancelResponse {
}

message MsgBuy {
  string creator = 1;
  string seller = 2;
  uint64 id = 3;
}

message MsgBuyResponse {
}

message MsgSellNFT {
  string creator = 1;
  uint64 id = 2;
  string classId = 3;
  string nftId = 4;
  string price = 5;
}

message MsgSellNFTResponse {
}

message MsgBuyNFT {
  string creator = 1;
  string seller = 2;
  uint64 id = 3;
}

message MsgBuyNFTResponse {
}

message MsgCancelNFT {
  string creator = 1;
  uint64 id = 3;
}

message MsgCancelNFTResponse {
}

// this line is used by starport scaffolding # proto/tx/message
